--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon -e hbs,js,css app.js"
+    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
-    "hbs": "^4.1.1",
+    "hbs": "^4.1.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -24,7 +25,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.1.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.1.1"
   }
 }
